fix visualization on inferring protocols

--- a/client/app/modules/healthcenters/views/list.html
+++ b/client/app/modules/healthcenters/views/list.html
@@ -5,8 +5,8 @@
     <div class="panel panel-default mansonryitem" ng-repeat="item in healthcenters">
      	
      	<div class="panel-heading">
-     		   <a href="" ui-sref="^.view({id: item.id})">{{item.main_name}}</a>
-     		   
+     		   <!--<a href="" ui-sref="^.view({id: item.id})">{{item.general_name}}</a>-->
+     		<strong>{{item.general_name}}</strong>  
         <div class="box-tools pull-right">
     
           <span ng-show="item.ownerId==$parent.user.id||$parent.isadmin" class="pull-right btn-group">
@@ -25,7 +25,7 @@
      	</div>
      	  
      	<div class="panel-body">
-     	  {{item.main_location}}
+     	  {{item.general_location}}
       </div>
       
     </div>
