--- a/client/app/modules/healthcenters/views/form.html
+++ b/client/app/modules/healthcenters/views/form.html
@@ -6,7 +6,7 @@
 
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="box box-primary">
             <div class="box-header">
                 <h3 class="box-title"></h3>
@@ -37,7 +37,7 @@
     </div>
 
 
-    <div class="col-md-6">
+    <div class="col-md-12" ng-show="isadmin">
         <div class="box box-primary">
             <div class="box-header">
                 <h3 class="box-title">Healthcenter</h3>
