--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -34,7 +34,7 @@
                             </select>
                         </div>
                         <div class="col-sm-10">
-                        <label for="outcome_uiselect" class="control-label">Select condition to add</label>
+                        <label for="outcome_uiselect" class="control-label">Select outcome to add</label>
                         <ui-select name="outcome_uiselect" search-enabled="true" ng-disabled="!outcome.selectedType"
                             on-select="addOutcome($item, $model)" 
                             ng-model="outcome.selected" theme="bootstrap">
