ui fix min-height for evidence articles

--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -70,7 +70,7 @@
                         
                     <div ng-if="tab.evidence">
                     <br>
-                    <div class="row" >
+                    <div class="row" style="min-height:300px">
 
                         <div class="col-sm-11">
                         <label for="evidence_uiselect" class="control-label">Select article to add as evidence</label>
