--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -68,9 +68,9 @@
                 </div>
                           
                         
-                    <div ng-if="tab.evidence">
+                    <div ng-if="tab.evidence" style="min-height:300px">
                     <br>
-                    <div class="row" style="min-height:300px">
+                    <div class="row">
 
                         <div class="col-sm-11">
                         <label for="evidence_uiselect" class="control-label">Select article to add as evidence</label>
