--- a/client/app/modules/healthcenters/views/list.html
+++ b/client/app/modules/healthcenters/views/list.html
@@ -9,7 +9,7 @@
      		<!--<strong>{{item.general_name}}</strong>  -->
         <div class="box-tools pull-right">
     
-          <span ng-show="item.ownerId==$parent.user.id||$parent.isadmin" class="pull-right btn-group">
+          <span ng-show="$parent.isadmin" class="pull-right btn-group">
             <a href="" class="btn btn-xs btn-default"
                ui-sref="^.edit({id: item.id})">
               <i class="fa fa-pencil"></i>
