--- a/client/app/modules/healthcenters/views/main.html
+++ b/client/app/modules/healthcenters/views/main.html
@@ -1,4 +1,4 @@
 <section admin-header class="content-header" title="{{ 'Health centers' | translate }}" sub-title="{{ 'Manage your health centers here!' | translate }}">
-    <a ui-sref=".add" class="btn btn-default btn-sm" translate>Add</a>
+    <a ng-show="isadmin" ui-sref=".add" class="btn btn-default btn-sm" translate>Add</a>
 </section>
 <section ui-view class="content"></section>
