--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -68,7 +68,7 @@
                 </div>
                           
                         
-                    <div ng-if="tab.evidence" style="min-height:300px">
+                    <div ng-if="tab.evidence">
                     <br>
                     <div class="row">
 
