unrestrict bioportal autocomplete

--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -55,7 +55,7 @@
                           <li ng-repeat="outcome in protocol.outcomes track by $index">
                               
 <b>{{outcome.type|ucfirst}}</b> outcome :  
-                            <a ng-href="http://bioportal.bioontology.org/ontologies/ICD10?p=classes&conceptid={{outcome.link}}" target="_blank" >
+                            <a ng-href="{{outcome.link}}" target="_blank" >
                                <b>{{outcome.label}}</b>
                             </a>
                                 <span>
