--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -130,3 +130,26 @@ a>i.fa{
 }
 
 
+/*query builder*/
+
+.group{
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border: solid 1px #666;
+}
+
+.group-conditions{
+    margin-left: 20px;
+}
+
+.alert-group{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-color: #DDDDDD;
+}
+
+.condition, .group{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
