--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -35,6 +35,7 @@
                         </div>
                         <div class="col-sm-10">
                         <label for="outcome_uiselect" class="control-label">Select outcome to add</label>
+                        <img ng-show="loading" src="/images/ajax-loader.gif"></img>
                         <ui-select name="outcome_uiselect" search-enabled="true" ng-disabled="!outcome.selectedType"
                             on-select="addOutcome($item, $model)" 
                             ng-model="outcome.selected" theme="bootstrap">
@@ -74,6 +75,8 @@
 
                         <div class="col-sm-11">
                         <label for="evidence_uiselect" class="control-label">Select article to add as evidence</label>
+                        
+                        <img ng-show="loading" src="/images/ajax-loader.gif"></img>
                         <ui-select name="evidence_uiselect" search-enabled="true" reset-search-input="true"
                             on-select="addPubmedArticle($item, $model)" 
                             ng-model="evidence.selected" theme="bootstrap">
@@ -81,7 +84,7 @@
                             <ui-select-choices 
                                 repeat="article in pubmedResults track by $index" 
                                 refresh="searchPubmed($select.search)" 
-                                refresh-delay="800">
+                                refresh-delay="0">
                                 <div ng-bind-html="article.title | highlight: $select.search"></div>
                                 <small ng-bind="article.authorString"></small> <cite><b ng-bind="article.pubYear"></b></cite>
                             </ui-select-choices>
@@ -121,23 +124,7 @@
                     <div ng-if="tab.initial_conditions">
                     <br>
                     <div class="row">
-
-                        <!--<label for="evidence_uiselect" class="control-label">Select article to add as evidence</label>-->
-                        <!--<ui-select name="evidence_uiselect" search-enabled="true" reset-search-input="true"-->
-                        <!--    on-select="addPubmedArticle($item, $model)" -->
-                        <!--    ng-model="evidence.selected" theme="bootstrap">-->
-                        <!--    <ui-select-match allow-clear="true" placeholder="Search in pubmed...">{{$select.selected.title}}</ui-select-match>-->
-                        <!--    <ui-select-choices -->
-                        <!--        repeat="article in pubmedResults track by $index" -->
-                        <!--        refresh="searchPubmed($select.search)" -->
-                        <!--        refresh-delay="800">-->
-                        <!--        <div ng-bind-html="article.title | highlight: $select.search"></div>-->
-                        <!--        <small ng-bind="article.authorString"></small> <cite><b ng-bind="article.pubYear"></b></cite>-->
-                        <!--    </ui-select-choices>-->
-                        <!--    </ui-select>-->
-                        <!--    </label>-->
                             
-                                    
                     </div>
                     <div class="row">
                         
