--- a/client/app/modules/core/views/app.html
+++ b/client/app/modules/core/views/app.html
@@ -152,12 +152,12 @@
     <div class="form-inline">
         <div ng-show="loading" class="loadingSelect"></div>
         <select ng-options="o.name as o.name for o in operators" ng-model="group.operator" class="form-control input-sm"></select>
-        <a style="margin-left: 5px" ng-click="addCondition()" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Condition</a>
-        <a style="margin-left: 5px" ng-click="addGroup()" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Group</a>
-        <a style="margin-left: 5px" ng-click="removeGroup()" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-minus-sign"></span> Remove Group</a>
+        <a style="margin-left: 5px" ng-click="addCondition()" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus-sign"></span> Add Condition</a>
+        <a style="margin-left: 5px" ng-click="addGroup()" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-plus-sign"></span> Add Group</a>
+        <a ng-show="$parent.group" style="margin-left: 5px" ng-click="removeGroup()" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-minus-sign"></span> Remove Group</a>
     </div>
     <div class="group-conditions">
-        <div ng-repeat="rule in group.rules | orderBy:'index'" class="condition">
+        <div ng-repeat="rule in group.rules track by $index| orderBy:'index'" class="condition">
             <div ng-switch="rule.hasOwnProperty('group')">
                 <div ng-switch-when="true">
                     <le-builder group="rule.group"></le-builder>
@@ -183,6 +183,7 @@
                     </div>
                 </div>
             </div>
+            <span style="margin: 0 15%;" class="text-center label label-default">{{(($index+1)!==group.rules.length?group.operator:"")}}</span>
         </div>
     </div>
 </div>
