--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -154,6 +154,11 @@ a>i.fa{
     margin-top: 15px;
     margin-bottom: 15px;
 }
+.le-operator.label{
+  display:inline-block;
+  padding:0 .3em;
+}
+
 
 /*loading spinner on ui-select*/
 .loadingSelect{    
