--- a/client/app/modules/healthcenters/views/list.html
+++ b/client/app/modules/healthcenters/views/list.html
@@ -32,6 +32,6 @@
      
     
   </div>
-  <div class="alert alert-warning" role="alert" ng-show="!healthcenters.length">There are no health centers yet. Please add one</div>
+  <div class="alert alert-warning" role="alert" ng-show="!healthcenters.length">There are no health units yet. Please add one</div>
 </div>
 
