--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -23,51 +23,9 @@
                            class="protocolform"> <br>
                     <div class="container">
                         
-                    <div ng-if="tab.outcome">
-                    <br>
-                    <div class="row" >
-
-                        <div class="col-sm-2">
-                           <label for="outcome_type" class="control-label">Outcome type</label>
-                            <select name="outcome_type" class="form-control" ng-model="outcome.selectedType" ng-init="outcome.selectedType=outcome.types[0]">
-                                 <option ng-repeat="option in outcome.types" value="{{option}}">{{option | ucfirst}}</option>
-                            </select>
-                        </div>
-                        <div class="col-sm-10">
-                        <label for="outcome_uiselect" class="control-label">Select outcome to add</label>
-                        <div ng-show="loading" class="loadingSelect"></div>
-                        <ui-select name="outcome_uiselect" search-enabled="true" ng-disabled="!outcome.selectedType"
-                            on-select="addOutcome($item, $model)" 
-                            ng-model="outcome.selected" theme="bootstrap">
-                            <ui-select-match placeholder="Search for outcome...">{{$select.selected.label}}</ui-select-match>
-                            <ui-select-choices 
-                                repeat="outcome in autocompleteResults track by $index" 
-                                refresh="bioportalAutocomplete($select.search,{templateOptions:{bioportal:{}}})" 
-                                refresh-delay="0">
-                                <div ng-bind-html="outcome.label | highlight: $select.search"></div>
-                            </ui-select-choices>
-                        </ui-select>
-                        </div>
-                    </div>
-                    <div class="row" ng-show="protocol.outcomes.length>0"><hr></div>
-                    <div class="row">
-                        
-                       <ul>
-                          <li ng-repeat="outcome in protocol.outcomes track by $index">
-                              
-<b>{{outcome.type|ucfirst}}</b> outcome :  
-                            <a ng-href="{{outcome.link}}" target="_blank" >
-                               <b>{{outcome.label}}</b>
-                            </a>
-                                <span>
-                                <a href="" class="btn btn-xs btn-default" ng-click="removeOutcome($index)">
-                                <span class="ion-close-round"></span></a>
-                                </span>
-                          </li>
-                        </ul>
-                    </div>
-                </div>
-                          
+                    
+                        <formly-form model="tab.form.model" fields="tab.form.fields" form="form" options="tab.form.options">
+                        </formly-form>      
                         
                     <div ng-if="tab.evidence">
                     <br>
@@ -124,21 +82,52 @@
                     <div ng-if="tab.initial_conditions">
                     <br>
                     <div class="row">
-                            
-                    </div>
-                    <div class="row">
-                        
-                        <div class="alert alert-info">
-                            <strong>User friendly output: </strong>
-                            <h3><span ng-bind-html="output"></span></h3>
+                        <div>
+                            <label style="margin-left:15px">Initial Conditions</label>    
+                            <div class="alert alert-warning">
+                                <strong>User friendly output: </strong>
+                                <h3><span ng-bind-html="output"></span></h3>
+                            </div>
                         </div>
                         <le-builder group="filter.group"></le-builder>
                     </div>
                 </div>
                           
-                          
-                        <formly-form model="tab.form.model" fields="tab.form.fields" form="form" options="tab.form.options">
-                        </formly-form>
+                
+                    <div ng-if="tab.outcome">
+                    <br>
+                    <div class="row" >
+
+                        <label for="outcome_uiselect" class="control-label">Select outcome to add</label>
+                        <div ng-show="loading" class="loadingSelect"></div>
+                        <ui-select name="outcome_uiselect" search-enabled="true"
+                            on-select="addOutcome($item, $model)" 
+                            ng-model="outcome.selected" theme="bootstrap">
+                            <ui-select-match placeholder="Search for outcome...">{{$select.selected.label}}</ui-select-match>
+                            <ui-select-choices 
+                                repeat="outcome in autocompleteResults track by $index" 
+                                refresh="bioportalAutocomplete($select.search,{templateOptions:{bioportal:{}}})" 
+                                refresh-delay="0">
+                                <div ng-bind-html="outcome.label | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                    <div class="row" ng-show="protocol.outcomes.length>0"><hr></div>
+                    <div class="row">
+                        
+                       <ul>
+                          <li ng-repeat="outcome in protocol.outcomes track by $index">
+                            <a ng-href="{{outcome.link}}" target="_blank" >
+                               <b>{{outcome.label}}</b>
+                            </a>
+                                <span>
+                                <a href="" class="btn btn-xs btn-default" ng-click="removeOutcome($index)">
+                                <span class="ion-close-round"></span></a>
+                                </span>
+                          </li>
+                        </ul>
+                    </div>
+                </div>          
                         
                         
                         </div>
