--- a/client/app/modules/protocols/views/view.html
+++ b/client/app/modules/protocols/views/view.html
@@ -157,7 +157,7 @@
             <li class="list-group-item" ng-repeat="user in pusers">{{user.firstName +' '+ user.lastName}} {{ user.specialty }}</li>
           </ul>
         </tab>
-        <tab heading="Health centers">
+        <tab heading="Health units">
           <ul class="list-group">
             <li ng-repeat="center in pcenters" class="list-group-item">{{center.name}} {{center.location }}</li>
             
