--- a/client/app/modules/users/views/profile.html
+++ b/client/app/modules/users/views/profile.html
@@ -10,7 +10,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <formly-form result="user" fields="formFields" options="formOptions" ng-submit="onSubmit()"></formly-form>
+                <formly-form model="user" fields="formFields" options="formOptions" ng-submit="onSubmit()"></formly-form>
             </div>
             <div class="col-md-4">
 
@@ -36,6 +36,6 @@
             <button class="btn btn-primary btn-success" ng-click="onSubmit()" translate>Update profile</button>
         </div>
     </div>
-    <div ng-if="loading" class="overlay"></div>
-    <div ng-if="loading" class="loading-img"></div>
+    <!--<div ng-if="loading" class="overlay"></div>-->
+    <!--<div ng-if="loading" class="loading-img"></div>-->
 </div>
