--- a/client/app/modules/users/views/profile.html
+++ b/client/app/modules/users/views/profile.html
@@ -10,7 +10,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <formly-form model="user" fields="formFields" options="formOptions" ng-submit="onSubmit()"></formly-form>
+                <formly-form model="form.model" fields="form.fields" options="form.options" ng-submit="onSubmit()"></formly-form>
             </div>
             <div class="col-md-4">
 
